[tool.poetry]
name = "test-airbyte-dbt-transformation"
version = "0.1.0"
description = ""
authors = ["1bk <l.boon.keong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-bigquery = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

